# SolanaRustSocial

./: Cargo.toml  LICENSE  README.md
docs/: architecture.md
src/: error.rs  lib.rs  main.rs  models.rs  program.rs  state.rs  token.rs  utils.rs
