[package]
name = "solana_rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Solana social media application built with Rust"

[dependencies]
solana-sdk = "1.17.0"
solana-program = "1.17.0"
solana-client = "1.17.0"
borsh = "0.10.3"
borsh-derive = "0.10.3"
thiserror = "1.0.50"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
clap = { version = "4.4.6", features = ["derive"] }

[dev-dependencies]
solana-program-test = "1.17.0"
solana-validator = "1.17.0"

[lib]
name = "solana_rust"
path = "src/lib.rs"

[[bin]]
name = "solana_rust"
path = "src/main.rs"